# fractalvr

./: CMakeLists.txt
include/: CGLRenderModel.h
shaders_old/: accelerator.frag  raycaster.frag
src/: CGLRenderModel.cpp  CMainApplication.cpp  CMakeLists.txt  main.cpp
